--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     </header>
     <main>
         <section id="intro">
-            <h2>My name is Louis</h2>
-                <p>I am a junior software engineer, with an interest in web/app development.</p>
-            <br?
+            <h2>I'm Louis M.</h2>
+                <img src="/SoftwareProfile.jpg" alt="profile-image">
+                <p>I am a junior software engineer, with an interest in web/app development in the sciences.</p>
+            <br>
             <h3>Location</h3>
                 <p>Current location Orlando, Fl</p>
 
