--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="group">
                 <div class="item">
                     <h2>I'm Louis M.</h2>
-                    <img src="/SoftwareProfile.jpg" alt="profile-image">
+                    <img src="https://user-images.githubusercontent.com/44560811/87881236-f129a500-c9c5-11ea-904d-63dcb5632eb1.jpg" alt="profile-image">
                 </div>
                 
                 <div class="item-double intro-text">
@@ -56,7 +56,7 @@
             <div class="group projects">
                 <div class=" items project-items">
                     <h4><strong>Quiz App</strong></h4>
-                    <img src="/QuizApp.jpg" alt="Quiz-app-image">
+                    <img src="https://user-images.githubusercontent.com/44560811/87881246-0a325600-c9c6-11ea-8b22-4562ddd5b440.jpg" alt="Quiz-app-image">
                     <a href="https://maxwellvincent.github.io/QuizApp/">Link to Live-Project</a>
                     <a href="https://github.com/Maxwellvincent/QuizApp">GitHub Repo</a>
                     <p>This app generates random questions, and keeps score of the number of questions correct, providing the user with the percent correct at the end</p>
@@ -65,7 +65,7 @@
     
                 <div class="items project-items">
                     <h4><strong>Covid Api</strong></h4>
-                    <img src="/CovidSS2.jpg" alt="Covid-19-api-image">
+                    <img src="https://user-images.githubusercontent.com/44560811/87881245-069ecf00-c9c6-11ea-97e1-4467f75c92f0.jpg" alt="Covid-19-api-image">
                     <a href="https://maxwellvincent.github.io/ApICapstone/">Link to Live-Project</a>
                     <a href="https://github.com/Maxwellvincent/ApICapstone">GitHub Repo</a>
                     <p>This app allows the user to quickly find global statistics regarding the covid-19 virus. User is able to generate current statistics in their location, and search for statistics in other countries</p>
